# beam-solver

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
archive/: BeamInF.ipynb  BeamVyD.txt  Prueba.py  beam_v1_original.py  beam_v2_original.py
src/beam_solver/: __init__.py  __main__.py  app_streamlit.py  cli.py  interactive.py  model.py  plotter.py  solver.py
tests/: test_solver.py
