[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beam-solver"
version = "0.1.0"
description = "Statically determinate beam analysis with shear and moment diagrams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "J. Daniel Garcia Castro", email = "danyband02@gmail.com" },
]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]
streamlit = ["streamlit>=1.30"]

[project.scripts]
beam-solver = "beam_solver.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
