[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "beam-solver"
version = "0.1.0"
description = "Statically determinate beam analysis with shear and moment diagrams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "J. Daniel Garcia Castro", email = "danyband02@gmail.com" },
]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
